set up and style footer and fix input element spacing

--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@ input {
   background-color: rgba(249, 249, 249, 1);
   border-top-left-radius: 25px;
   border-bottom-left-radius: 25px;
+  padding: 0 0 0 40px;
   width: 75%;
 }
 
@@ -169,4 +170,15 @@ main {
   margin: 0;
   height: 20px;
   font-size: 14px;
+}
+
+footer {
+  display: flex;
+  justify-content: flex-start;
+  gap: 10px;
+  padding: 0 20px;
+  font-size: 12px;
+  font-weight: bold;
+  color:rgba(0, 0, 0, 0.7);
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
